# ShadingModels

./: CMakeLists.txt  README.md  ShadingModels.pro
Constant/: CMakeLists.txt  Constant  Constant.pro  README.md
Constant/include/: NGLScene.h
Constant/shaders/: ConstantFragment.glsl  ConstantVertex.glsl
Constant/src/: NGLScene.cpp  main.cpp
DirectionalLightASD/: CMakeLists.txt  DirectionalLightASD  DirectionalLightASD.pro  README.md
DirectionalLightASD/include/: NGLScene.h
DirectionalLightASD/shaders/: DirectionalLightFrag.glsl  DirectionalLightVert.glsl
DirectionalLightASD/src/: NGLScene.cpp  main.cpp
DirectionalLightPointLight/: CMakeLists.txt  DirectionalLightPointLight  DirectionalLightPointLight.pro  README.md
DirectionalLightPointLight/include/: NGLScene.h
DirectionalLightPointLight/shaders/: PointDirLightFrag.glsl  PointDirLightVert.glsl
DirectionalLightPointLight/src/: NGLScene.cpp
MultipleLights/: CMakeLists.txt  MultipleLights  MultipleLights.pro  README.md
MultipleLights/include/: NGLScene.h
MultipleLights/shaders/: MultipleLightsFrag.glsl  MultipleLightsVert.glsl
MultipleLights/src/: NGLScene.cpp
MultiplePointLights/: CMakeLists.txt  MultiplePointLights  MultiplePointLights.pro  README.md
MultiplePointLights/include/: NGLScene.h
MultiplePointLights/shaders/: MultiplePointLightFrag.glsl  MultiplePointLightVert.glsl
MultiplePointLights/src/: NGLScene.cpp
PerFragADS/: CMakeLists.txt  PerFragADS.pro  PerFragASD  README.md
PerFragADS/include/: NGLScene.h
PerFragADS/shaders/: PerFragASDFrag.glsl  PerFragASDVert.glsl
PerFragADS/src/: NGLScene.cpp  main.cpp
PerVertexASD/: CMakeLists.txt  PerVertexASD  PerVertexASD.pro  README.md
PerVertexASD/include/: NGLScene.h
PerVertexASD/shaders/: PerVertASDFrag.glsl  PerVertASDVert.glsl  PerVertASDVertFunc.glsl
PerVertexASD/src/: NGLScene.cpp  main.cpp
PerVertexDiffuse/: CMakeLists.txt  PerVertexDiffuse  PerVertexDiffuse.pro  README.md
PerVertexDiffuse/include/: NGLScene.h  OpenGLWindow.h
PerVertexDiffuse/shaders/: PerVertDiffuseFrag.glsl  PerVertDiffuseVert.glsl
PerVertexDiffuse/src/: NGLScene.cpp
PointLightASD/: CMakeLists.txt  PointLightASD  PointLightASD.pro  README.md
PointLightASD/include/: NGLScene.h
PointLightASD/shaders/: PointLightDiffuseFrag.glsl  PointLightDiffuseVert.glsl
PointLightASD/src/: NGLScene.cpp
PointLightDiffuse/: CMakeLists.txt  PointLightDiffuse  PointLightDiffuse.pro  README.md
PointLightDiffuse/include/: NGLScene.h
PointLightDiffuse/shaders/: PointLightDiffuseFrag.glsl  PointLightDiffuseVert.glsl
PointLightDiffuse/src/: NGLScene.cpp  main.cpp
ShaderSubroutines/: CMakeLists.txt  README.md  ShaderSubroutines.pro
ShaderSubroutines/include/: NGLScene.h
ShaderSubroutines/shaders/: PointLightDiffuseFrag.glsl  PointLightDiffuseVert.glsl
ShaderSubroutines/src/: NGLScene.cpp
TwoSidedASD/: CMakeLists.txt  README.md  TwoSidedASD  TwoSidedASD.pro
TwoSidedASD/include/: NGLScene.h
TwoSidedASD/shaders/: PerVertASDFrag.glsl  PerVertASDVert.glsl  PerVertASDVertFunc.glsl
TwoSidedASD/src/: NGLScene.cpp
UniformBlock/: CMakeLists.txt  README.md  UniformBlock.pro
UniformBlock/include/: NGLScene.h
UniformBlock/shaders/: MultiplePointLightVert.glsl
UniformBlock/src/: NGLScene.cpp
WireFrameDiscard/: CMakeLists.txt  README.md  WireFrameDiscard.pro
WireFrameDiscard/include/: NGLScene.h
(+4 files in other folders)
